# ncm-player-tui

./: .gitignore  Cargo.toml  README.md  packaging.md
ncm-api/: Cargo.toml
ncm-api/src/: config.rs  lib.rs  main.rs  settings.rs
ncm-api/src/model/: account.rs  lyric.rs  song.rs  songlist.rs
ncm-client/: Cargo.toml
ncm-client/src/: lib.rs  main.rs  model.rs
ncm-client/src/model/: account.rs  song.rs
ncm-client/src/responses/: login.rs
ncm-play/: Cargo.toml
ncm-play/src/: config.rs  lib.rs  track.rs
ncm-tui/: Cargo.toml
ncm-tui/src/: actions.rs  config.rs  main.rs  ui.rs
ncm-tui/src/config/: command.rs  logo.rs  path.rs  style.rs  ui.rs
ncm-tui/src/ui/: app.rs  panel.rs  screen.rs  widget.rs
ncm-tui/src/ui/panel/: lyric_panel.rs  playlist_candidate_panel.rs  playlist_panel.rs  songlist_candidates_panel.rs
ncm-tui/src/ui/screen/: help_screen.rs  login_screen.rs  main_screen.rs  playlist_screen.rs  songlists_screen.rs
ncm-tui/src/ui/widget/: bottom_bar.rs  command_line.rs  playback_bar.rs  ui_list.rs
public/: ncm-tui-player.desktop
