[package]
name = "ncm-api"
version = "1.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
cookie_store = "0.21.1"
hex = "0.4.3"
isahc = { version = "1.7.2", features = ["cookies"] }
lazy_static = "1.5.0"
openssl = "0.10.68"
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = "1.41.1"
urlqstring = "0.3.5"
log = "0.4.22"
