[package]
name = "ncm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
fast_qr = "0.12.7"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["native-tls-vendored", "json"] }
tokio = { version = "1.42.0", features = ["full"] }
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"