[package]
name = "ncm-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
#async-trait = "0.1.83"

crossterm = { version = "0.28.1", features = ["serde"] }

dirs-next = "2.0.0"

fast_qr = "0.12.6"

lazy_static = "1.5.0"
log = "0.4.22"

ncm-api = { path = "../ncm-api" }
# ncm-play = { path = "../ncm-play" }

ratatui = { version = "0.29.0", features = ["serde"] }

serde = { version = "1.0.214", features = ['derive'] }
serde_yml = "0.0.12"

tokio = { version = "1.41.1", features = ["full"] }
tui-textarea = "0.7.0"

unicode-width = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.8.1"