[package]
name = "ncm-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"

crossterm = { version = "0.28.1", features = ["serde"] }

dirs-next = "2.0.0"

env_logger = "0.11.5"

fast_qr = "0.12.6"

gstreamer = "0.23.3"
gstreamer-play = "0.23.2"

lazy_static = "1.5.0"
log = "0.4.22"

ncm-client = { path = "../ncm-client" }
ncm-play = { path = "../ncm-play" }

ratatui = { version = "0.29.0", features = ["serde"] }

serde = { version = "1.0.214", features = ['derive'] }
serde_yml = "0.0.12"

tokio = { version = "1.41.1", features = ["full"] }
tui-textarea = "0.7.0"

unicode-width = "0.2.0"